objects/PLNDR__Commercial_Loan_Account__c.object
<CustomObject>
    <description>PrecisionLender Commercial Loan Account</description>
    <fields>
        <fullName>PLNDR__Adjustment_Frequency__c</fullName>
        <description>The adjustment frequency for and adjustable rate loan in months.</description>
        <inlineHelpText>This field is only valid when the Rate Type is Adjustable</inlineHelpText>
        <label>Adjustment Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLNDR__Amortization_Notes__c</fullName>
        <description>Any notes about the Amortization Schedule (e.g. interest only periods, non-linear amortization, etc.)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Any notes about the Amortization Schedule (e.g. interest only periods, non-linear amortization, etc.)</inlineHelpText>
        <label>Amortization Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Amortization__c</fullName>
        <description>Values are in months</description>
        <inlineHelpText>Values are in months</inlineHelpText>
        <label>Amortization</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLNDR__Amount__c</fullName>
        <description>Loan Amount</description>
        <inlineHelpText>Loan Amount</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Annual_Fees__c</fullName>
        <label>Annual Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__CalculatedEffectiveLoanToValue__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Effective LTV</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Effective LTV</inlineHelpText>
        <label>Effective LTV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Caps_Floors_Summary__c</fullName>
        <description>A simple text summary of any Caps &amp; Floors.  Only relevant for Floating or Adjustable Loans</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Relevant for Floating or Adjustable rates only.</inlineHelpText>
        <label>Caps &amp; Floors Summary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Expected_Life__c</fullName>
        <description>The expected life of the loan in months.</description>
        <inlineHelpText>Values are in months</inlineHelpText>
        <label>Expected Life</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Assets__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Assets</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Assets</inlineHelpText>
        <label>Average Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Equity__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Average Equity</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Average Equity</inlineHelpText>
        <label>Average Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Average_Yield__c</fullName>
        <description>This is the average interest income divided by the average outstanding assets.</description>
        <formula>if( PLNDR__FS_Average_Assets__c &gt; 0, PLNDR__FS_Interest_Income__c / PLNDR__FS_Average_Assets__c , null )</formula>
        <inlineHelpText>This is the average interest income divided by the average outstanding assets.</inlineHelpText>
        <label>Average Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Expense</inlineHelpText>
        <label>Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Interest Income</inlineHelpText>
        <label>Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Average_Balance__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Average Balance</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Average Balance</inlineHelpText>
        <label>Loan Average Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Commitment__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Commitment</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Commitment</inlineHelpText>
        <label>Loan Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Gross_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Gross Funding</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Gross Funding</inlineHelpText>
        <label>Loan Gross Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Loss_Reserves__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Loss Reserves</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Loss Reserves</inlineHelpText>
        <label>Loan Loss Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Net_Commitment__c</fullName>
        <inlineHelpText>PrecisionLender Loan Net Commitment</inlineHelpText>
        <label>Loan Net Commitment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Loan_Net_Funding__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Loan Net Funding</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Loan Net Funding</inlineHelpText>
        <label>Loan Net Funding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Income</inlineHelpText>
        <label>Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Interest_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Net Interest Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Net Interest Income</inlineHelpText>
        <label>Net Interest Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Net_Interest_Margin__c</fullName>
        <description>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</description>
        <formula>IF( PLNDR__FS_Average_Assets__c &gt; 0, PLNDR__FS_Net_Interest_Income__c / PLNDR__FS_Average_Assets__c, null )</formula>
        <inlineHelpText>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets.</inlineHelpText>
        <label>Net Interest Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Non_Interest_Expense__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Non Interest Expense</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Non Interest Expense</inlineHelpText>
        <label>Non Interest Expense</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Other_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Other Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Other Income</inlineHelpText>
        <label>Other Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Pre_Tax_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Pre-Tax Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Pre-Tax Income</inlineHelpText>
        <label>Pre-Tax Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROA</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROA</inlineHelpText>
        <label>ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement ROE</inlineHelpText>
        <label>ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_Net_Income__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target Net Income</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target Net Income</inlineHelpText>
        <label>Target Net Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_ROA__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROA</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target ROA</inlineHelpText>
        <label>Target ROA</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Target_ROE__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Target ROE</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Target ROE</inlineHelpText>
        <label>Target ROE</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__FS_Taxes__c</fullName>
        <description>PrecisionLender Scenario Financial Statement Taxes</description>
        <inlineHelpText>PrecisionLender Scenario Financial Statement Taxes</inlineHelpText>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Fixed_Period__c</fullName>
        <description>This is the initial fixed period for an Adjustable Rate Loan, as such it is only applicable when the Rate Type is Adjustable. Values are in months.</description>
        <inlineHelpText>This is the initial fixed period for an Adjustable Rate Loan, as such it is only applicable when the Rate Type is Adjustable. Values are in months.</inlineHelpText>
        <label>Fixed Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLNDR__Fixed_Rate_Lock_Summary__c</fullName>
        <description>Summary of Rate or Spreadlock</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fixed Rate Lock Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Index__c</fullName>
        <description>Index Name for Floating and Adjustable Rate loans (e.g. Prime, 1M LIBOR, etc.)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Index</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Initial_Fees_Dollars__c</fullName>
        <description>The fixed dollar portion of the initial fees.</description>
        <inlineHelpText>The fixed dollar portion of the initial fees.</inlineHelpText>
        <label>Initial Fees ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLNDR__Initial_Fees_Percent__c</fullName>
        <description>The percentage portion of the initial fees.</description>
        <inlineHelpText>The percentage portion of the initial fees.</inlineHelpText>
        <label>Initial Fees (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Initial_Fees__c</fullName>
        <formula>TEXT( ROUND(PLNDR__Initial_Fees_Percent__c * 100,2)) &amp; &quot;% + &quot; &amp; 

&quot;$&quot; &amp;
IF( 
  PLNDR__Initial_Fees_Dollars__c&gt;= 1000000, 
  TEXT(FLOOR(PLNDR__Initial_Fees_Dollars__c/ 1000000)) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
IF( 
  PLNDR__Initial_Fees_Dollars__c&gt;= 1000, 
  RIGHT(TEXT(FLOOR(PLNDR__Initial_Fees_Dollars__c/ 1000)), 3) &amp; &quot;,&quot;, 
  &quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(PLNDR__Initial_Fees_Dollars__c)), 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Fees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Initial_Rate__c</fullName>
        <label>Initial Rate</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Interest_Options__c</fullName>
        <description>A summary of the Interest Options within PrecisionLender (e.g. Payment Frequency, Interest Rate Basis, etc.)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A summary of the Interest Options within PrecisionLender (e.g. Payment Frequency, Interest Rate Basis, etc.)</inlineHelpText>
        <label>Interest Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Is_Renewal_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Renewal Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PLNDR__Maturity__c</fullName>
        <description>The contract maturity of the loan.</description>
        <inlineHelpText>Values are in months</inlineHelpText>
        <label>Maturity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLNDR__Payment_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__PrecisionLender_Last_Updated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrecisionLender Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PLNDR__PrecisionLender_Scenario__c</fullName>
        <label>PrecisionLender Scenario</label>
        <referenceTo>PLNDR__PrecisionLender_Scenario__c</referenceTo>
        <relationshipLabel>Commercial Loan Accounts</relationshipLabel>
        <relationshipName>PrecisionLender_Commercial_Loan_Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PLNDR__Prepayment_Option__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prepayment Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Rate_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Repricing_Duration__c</fullName>
        <description>Repricing duration based on loan type. Floating (Adjustment Frequency), Fixed (Maturity), Adjustable (Fixed Period).</description>
        <inlineHelpText>Repricing Duration for a Floating rate is equal to the Adjustment Frequency, for a Fixed rate it is equal to the Maturity and for an Adjustable rate it equals the Fixed Period.</inlineHelpText>
        <label>Repricing Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLNDR__Risk_Rating__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__ScenarioWeight__c</fullName>
        <description>PrecisionLender Scenario Weight</description>
        <label>Scenario Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Short_Code__c</fullName>
        <description>The short code is generated in PrecisionLender when a loan is priced. This code serves as the roundtrip Id which  follows the loan&apos;s journey through pricing, booking and then back to PL through the RA process.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The short code is generated in PrecisionLender when a loan is priced. This code serves as the roundtrip Id which  follows the loan&apos;s journey through pricing, booking and then back to PL through the RA process.</inlineHelpText>
        <label>Short Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLNDR__Spread__c</fullName>
        <description>The Spread above the Index for pricing Floating and Adjustable loans.</description>
        <inlineHelpText>The Spread above the Index for pricing Floating and Adjustable loans.</inlineHelpText>
        <label>Spread</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PLNDR__Tax_Exempt_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tax Exempt Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Commercial Loan Account</label>
    <nameField>
        <displayFormat>PL-CLA-{00000000}</displayFormat>
        <label>Commercial Loan Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Loan Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>